--- a/Data Exploring.ipynb
+++ b/Data Exploring.ipynb
@@ -4318,6 +4318,221 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sid</th>\n",
+       "      <th>dropout</th>\n",
+       "      <th>male</th>\n",
+       "      <th>math_ss</th>\n",
+       "      <th>read_ss</th>\n",
+       "      <th>gifted</th>\n",
+       "      <th>ever_alternative</th>\n",
+       "      <th>iep</th>\n",
+       "      <th>pct_days_absent</th>\n",
+       "      <th>gpa</th>\n",
+       "      <th>frpl</th>\n",
+       "      <th>ell</th>\n",
+       "      <th>race_num</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>9885.000000</td>\n",
+       "      <td>9885.0</td>\n",
+       "      <td>9885.000000</td>\n",
+       "      <td>9885.000000</td>\n",
+       "      <td>9885.000000</td>\n",
+       "      <td>9885.000000</td>\n",
+       "      <td>9885.000000</td>\n",
+       "      <td>9885.000000</td>\n",
+       "      <td>9885.000000</td>\n",
+       "      <td>9885.000000</td>\n",
+       "      <td>9885.000000</td>\n",
+       "      <td>9885.000000</td>\n",
+       "      <td>9885.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>55855.226201</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.595448</td>\n",
+       "      <td>19.925746</td>\n",
+       "      <td>26.334143</td>\n",
+       "      <td>0.094284</td>\n",
+       "      <td>0.446434</td>\n",
+       "      <td>0.151947</td>\n",
+       "      <td>14.155953</td>\n",
+       "      <td>1.618265</td>\n",
+       "      <td>0.681335</td>\n",
+       "      <td>0.027921</td>\n",
+       "      <td>0.384522</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>32400.644126</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.491448</td>\n",
+       "      <td>22.351877</td>\n",
+       "      <td>23.813702</td>\n",
+       "      <td>0.292239</td>\n",
+       "      <td>0.497148</td>\n",
+       "      <td>0.358988</td>\n",
+       "      <td>11.790239</td>\n",
+       "      <td>1.170869</td>\n",
+       "      <td>0.519180</td>\n",
+       "      <td>0.164755</td>\n",
+       "      <td>0.802757</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>12.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-1.000000</td>\n",
+       "      <td>-1.000000</td>\n",
+       "      <td>-1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-1.000000</td>\n",
+       "      <td>-1.000000</td>\n",
+       "      <td>-1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>27738.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-1.000000</td>\n",
+       "      <td>-1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>5.622391</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>55759.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>15.000000</td>\n",
+       "      <td>29.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>11.665601</td>\n",
+       "      <td>1.669500</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>84108.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>36.000000</td>\n",
+       "      <td>45.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>19.543192</td>\n",
+       "      <td>2.393000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>111988.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>80.000000</td>\n",
+       "      <td>80.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>94.444443</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 sid  dropout         male      math_ss      read_ss  \\\n",
+       "count    9885.000000   9885.0  9885.000000  9885.000000  9885.000000   \n",
+       "mean    55855.226201      1.0     0.595448    19.925746    26.334143   \n",
+       "std     32400.644126      0.0     0.491448    22.351877    23.813702   \n",
+       "min        12.000000      1.0    -1.000000    -1.000000    -1.000000   \n",
+       "25%     27738.000000      1.0     0.000000    -1.000000    -1.000000   \n",
+       "50%     55759.000000      1.0     1.000000    15.000000    29.000000   \n",
+       "75%     84108.000000      1.0     1.000000    36.000000    45.000000   \n",
+       "max    111988.000000      1.0     1.000000    80.000000    80.000000   \n",
+       "\n",
+       "            gifted  ever_alternative          iep  pct_days_absent  \\\n",
+       "count  9885.000000       9885.000000  9885.000000      9885.000000   \n",
+       "mean      0.094284          0.446434     0.151947        14.155953   \n",
+       "std       0.292239          0.497148     0.358988        11.790239   \n",
+       "min       0.000000          0.000000     0.000000        -1.000000   \n",
+       "25%       0.000000          0.000000     0.000000         5.622391   \n",
+       "50%       0.000000          0.000000     0.000000        11.665601   \n",
+       "75%       0.000000          1.000000     0.000000        19.543192   \n",
+       "max       1.000000          1.000000     1.000000        94.444443   \n",
+       "\n",
+       "               gpa         frpl          ell     race_num  \n",
+       "count  9885.000000  9885.000000  9885.000000  9885.000000  \n",
+       "mean      1.618265     0.681335     0.027921     0.384522  \n",
+       "std       1.170869     0.519180     0.164755     0.802757  \n",
+       "min      -1.000000    -1.000000     0.000000    -1.000000  \n",
+       "25%       1.000000     0.000000     0.000000     0.000000  \n",
+       "50%       1.669500     1.000000     0.000000     0.000000  \n",
+       "75%       2.393000     1.000000     0.000000     1.000000  \n",
+       "max       4.000000     1.000000     1.000000     4.000000  "
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fs_dropouts[fs_dropouts['dropout'] == 1].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
