Cleaning Up Remote REpository

--- a/notebooks/11th Grade Dropout Predictor.ipynb
+++ b/notebooks/11th Grade Dropout Predictor.ipynb
@@ -777,9 +777,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/kiara/opt/anaconda3/lib/python3.7/site-packages/sklearn/metrics/_classification.py:1221: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -794,6 +802,8 @@
       "   macro avg       0.09      0.50      0.16     15880\n",
       "weighted avg       0.04      0.19      0.06     15880\n",
       "\n",
+      "[[    0 12889]\n",
+      " [    0  2991]]\n",
       "Threshold value: 0.1\n",
       "              precision    recall  f1-score   support\n",
       "\n",
@@ -804,6 +814,8 @@
       "   macro avg       0.75      0.85      0.78     15880\n",
       "weighted avg       0.89      0.83      0.85     15880\n",
       "\n",
+      "[[10606  2283]\n",
+      " [  350  2641]]\n",
       "Threshold value: 0.25\n",
       "              precision    recall  f1-score   support\n",
       "\n",
@@ -814,6 +826,8 @@
       "   macro avg       0.82      0.87      0.84     15880\n",
       "weighted avg       0.91      0.90      0.90     15880\n",
       "\n",
+      "[[11800  1089]\n",
+      " [  550  2441]]\n",
       "Threshold value: 0.5\n",
       "              precision    recall  f1-score   support\n",
       "\n",
@@ -824,6 +838,8 @@
       "   macro avg       0.85      0.84      0.85     15880\n",
       "weighted avg       0.91      0.91      0.91     15880\n",
       "\n",
+      "[[12211   678]\n",
+      " [  784  2207]]\n",
       "Threshold value: 0.75\n",
       "              precision    recall  f1-score   support\n",
       "\n",
@@ -834,6 +850,8 @@
       "   macro avg       0.87      0.73      0.77     15880\n",
       "weighted avg       0.88      0.88      0.87     15880\n",
       "\n",
+      "[[12635   254]\n",
+      " [ 1586  1405]]\n",
       "Threshold value: 1\n",
       "              precision    recall  f1-score   support\n",
       "\n",
@@ -843,15 +861,9 @@
       "    accuracy                           0.81     15880\n",
       "   macro avg       0.41      0.50      0.45     15880\n",
       "weighted avg       0.66      0.81      0.73     15880\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/kiara/opt/anaconda3/lib/python3.7/site-packages/sklearn/metrics/_classification.py:1221: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+      "\n",
+      "[[12889     0]\n",
+      " [ 2991     0]]\n"
      ]
     }
    ],
@@ -862,8 +874,10 @@
     "\n",
     "    thresh_scores = classification_report(y_test,y_pred_thresh, target_names = ['Not Dropout', 'Dropout'])\n",
     "    #print(round(accuracy,4,)*100, \"%\")\n",
+    "    confusion_mat = confusion_matrix(y_test,y_pred_thresh)\n",
     "    print('Threshold value:', threshold[i])\n",
-    "    print(thresh_scores)"
+    "    print(thresh_scores)\n",
+    "    print(confusion_mat)"
    ]
   },
   {
