--- a/notebooks/9th Grade Dropout Predictor.ipynb
+++ b/notebooks/9th Grade Dropout Predictor.ipynb
@@ -385,6 +385,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Baseline Random Forest Classifier to determine Feature Importance"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -532,6 +539,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ell                 0.003902\n",
+       "gifted              0.009701\n",
+       "iep                 0.013748\n",
+       "male                0.018512\n",
+       "ever_alternative    0.019851\n",
+       "frpl                0.020137\n",
+       "race_num            0.031277\n",
+       "math_ss             0.113049\n",
+       "read_ss             0.115430\n",
+       "pct_days_absent     0.272659\n",
+       "gpa                 0.381734\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "feat_scores[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [
@@ -579,6 +617,13 @@
    "metadata": {},
    "source": [
     "This is not the best...Let's see if we can improve it. I want my dropout precision to be better! "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Random Forest Classifier Utilizing Oversampling of Minority(Dropout) Class"
    ]
   },
   {
@@ -753,7 +798,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's do some more feature engineering...Let's drop the last three cols"
+    "# Removing Low Importance Features"
    ]
   },
   {
@@ -1371,7 +1416,9 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1662,6 +1709,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Random Forest Classifier using only 2 most important features"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 34,
    "metadata": {},
@@ -1868,7 +1922,9 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1889,6 +1945,13 @@
    "source": [
     "new_score = classification_report(y_test,y_pred, target_names = ['Not Dropout', 'Dropout'])\n",
     "print(new_score)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tuning model hyperparameters using CV Search"
    ]
   },
   {
@@ -2103,6 +2166,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Evaluating Model Performance Based on Threshold value"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 48,
    "metadata": {},
@@ -2175,9 +2245,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/kiara/opt/anaconda3/lib/python3.7/site-packages/sklearn/metrics/_classification.py:1221: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -2192,6 +2270,8 @@
       "   macro avg       0.09      0.50      0.16     15880\n",
       "weighted avg       0.04      0.19      0.06     15880\n",
       "\n",
+      "[[    0 12889]\n",
+      " [    0  2991]]\n",
       "Threshold value: 0.1\n",
       "              precision    recall  f1-score   support\n",
       "\n",
@@ -2202,6 +2282,8 @@
       "   macro avg       0.65      0.74      0.62     15880\n",
       "weighted avg       0.84      0.66      0.70     15880\n",
       "\n",
+      "[[7878 5011]\n",
+      " [ 407 2584]]\n",
       "Threshold value: 0.25\n",
       "              precision    recall  f1-score   support\n",
       "\n",
@@ -2212,6 +2294,8 @@
       "   macro avg       0.72      0.76      0.73     15880\n",
       "weighted avg       0.84      0.82      0.83     15880\n",
       "\n",
+      "[[11069  1820]\n",
+      " [ 1037  1954]]\n",
       "Threshold value: 0.5\n",
       "              precision    recall  f1-score   support\n",
       "\n",
@@ -2222,6 +2306,8 @@
       "   macro avg       0.80      0.69      0.72     15880\n",
       "weighted avg       0.85      0.86      0.84     15880\n",
       "\n",
+      "[[12394   495]\n",
+      " [ 1729  1262]]\n",
       "Threshold value: 0.75\n",
       "              precision    recall  f1-score   support\n",
       "\n",
@@ -2232,6 +2318,8 @@
       "   macro avg       0.86      0.59      0.61     15880\n",
       "weighted avg       0.85      0.84      0.80     15880\n",
       "\n",
+      "[[12805    84]\n",
+      " [ 2418   573]]\n",
       "Threshold value: 1\n",
       "              precision    recall  f1-score   support\n",
       "\n",
@@ -2241,15 +2329,9 @@
       "    accuracy                           0.81     15880\n",
       "   macro avg       0.41      0.50      0.45     15880\n",
       "weighted avg       0.66      0.81      0.73     15880\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/kiara/opt/anaconda3/lib/python3.7/site-packages/sklearn/metrics/_classification.py:1221: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+      "\n",
+      "[[12889     0]\n",
+      " [ 2991     0]]\n"
      ]
     }
    ],
@@ -2260,8 +2342,10 @@
     "\n",
     "    thresh_scores = classification_report(y_test,y_pred_thresh, target_names = ['Not Dropout', 'Dropout'])\n",
     "    #print(round(accuracy,4,)*100, \"%\")\n",
+    "    confusion_mat = confusion_matrix(y_test,y_pred_thresh)\n",
     "    print('Threshold value:', threshold[i])\n",
-    "    print(thresh_scores)"
+    "    print(thresh_scores)\n",
+    "    print(confusion_mat)"
    ]
   },
   {
@@ -2321,6 +2405,13 @@
     "# summarize scores\n",
     "print('No Skill: ROC AUC=%.3f' % (ns_auc))\n",
     "print('Optimized Random Forest: ROC AUC=%.3f' % (best_rf_auc))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Using ROC Curve to Evaluate Model"
    ]
   },
   {
@@ -2421,6 +2512,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Using Precision-Recall Curve to Evaluate Model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 60,
    "metadata": {},
@@ -2495,11 +2593,11 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Comparing Model built with 2 Features with the 5 Feature Model"
+   ]
   },
   {
    "cell_type": "code",
@@ -2736,10 +2834,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "# calculate precision-recall curve\n",
-    "precision, recall, thresholds = precision_recall_curve(y_test, proba_dropouts)\n",
-    "auc = auc(recall, precision)"
+    "In conclusion, the random forest model, tuned with hyperparameter from the CV serach, trained and fit on the 5 most important features, and with a threshold of .25 performed the best in terms of accruacy and recall. "
    ]
   },
   {
@@ -2747,25 +2848,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "best_rf_precision, best_rf_recall, _ = precision_recall_curve(y_test, proba_dropouts)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "no_skill = len(y_test[y_test==1]) / len(y_test)\n",
-    "plt.figure(figsize=(20,10))\n",
-    "plt.plot([0, 1], [no_skill, no_skill], linestyle='--', label='No Skill')\n",
-    "plt.plot(best_rf_recall[optimal_idx], best_rf_precision[optimal_idx], marker='X')\n",
-    "plt.plot(best_rf_recall, best_rf_precision, marker='.', label='Optimized Random Forest')\n",
-    "plt.xlabel('Recall')\n",
-    "plt.ylabel('Precision')\n",
-    "plt.legend()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
